// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bcPKhP sc-grXZZQ kbdqoN gOZdGR"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bcPKhP sc-grXZZQ lexUcy gOZdGR"
>
  foo
</button>
`;
